--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             color: #ffffff;
             min-height: 100vh;
             padding: 20px;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
         
         .terminal-container {
@@ -28,6 +30,9 @@
             border-radius: 10px;
             padding: 30px;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
+            overflow: visible;
+            height: auto;
+            min-height: auto;
         }
         
         .header {
